# snapdragon_hack

./: .env.example  .gitignore  ChArUco_Context.md  README.md  compose.yaml
android_app/: gradle.properties  settings.gradle.kts
android_app/app/: build.gradle.kts
android_app/app/src/main/: AndroidManifest.xml
android_app/app/src/main/cpp/: CMakeLists.txt
android_app/docs/: pose-overlay-context.md
android_app/gradle/: libs.versions.toml
android_app/gradle/wrapper/: gradle-wrapper.properties
ml/: .env.example  .gitignore  Dockerfile  README.md  generate_charuco.py  llm_manual.py  pyproject.toml  requirements.txt
ml/export_assets/rtmpose_body2d-onnx-float/: metadata.json
ml/src/: __init__.py  api.py  config.py  contracts.py  settings.py
ml/src/biomechanics/: joint_angle.py  one_euro_filter.py  rep_counting.py
ml/src/calibration/: calibrate.py  capture_stereo_pairs.py  charuco_calibrate.py  generate_image.py  single_stereo_capture.py  stereo_calibrate.py  tempCodeRunnerFile.py
ml/src/llm/: feedback.py
ml/src/pipeline/: __init__.py  calibration_store.py  formfusion_pipeline.py  registry.py
ml/src/test/: test_api.py  test_formfusion_pipeline.py  test_joint_angle.py  test_one_euro_filter.py  test_rep_counter.py  test_settings.py  test_triangulation.py
ml/src/triangulation/: triangulation.py
web-backend/: .env.example  .gitignore  BACKEND_ARCHITECTURE_PLAN.md  Backend_Integration_Guide.md  Dockerfile  README.md  compose.yaml  formfusion_checklist.html  pyproject.toml
web-backend/docs/: operations.md  protocol.md
web-backend/scripts/: simulate_two_phones.py
web-backend/src/formfusion/: config.py  main.py
web-backend/src/formfusion/api/: dependencies.py  websocket.py
web-backend/src/formfusion/api/routes/: health.py  sessions.py
web-backend/src/formfusion/contracts/: http.py  websocket.py
web-backend/src/formfusion/domain/: errors.py  models.py
web-backend/src/formfusion/repositories/: sqlite.py
web-backend/src/formfusion/services/: calibration.py  connections.py  ml_client.py  runtime.py  sessions.py
web-backend/tests/: conftest.py
web-backend/tests/integration/: test_sessions.py  test_websocket.py
web-frontend/: .gitignore  Dockerfile  README.md  package-lock.json  package.json
web-frontend/scripts/: visual-check.mjs
web-frontend/src/app/: globals.css  layout.tsx  not-found.tsx
web-frontend/src/components/: angle-history-chart.tsx  connection-panel.tsx  dashboard.module.css  dashboard.tsx  live-session-bridge.tsx  skeleton-scene.tsx
web-frontend/src/lib/: connection-schema.ts  contracts.ts  session-query.ts
web-frontend/src/store/: live-session.ts
(+49 files in other folders)
