[project]
name = "ml"
version = "1.0.0"
description = "FormFusion calibration, 3D reconstruction, biomechanics, and AI coaching service"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "numpy==2.4.3",
    "opencv-python-headless==5.0.0.93",
    "python-multipart==0.0.32",
    "httpx==0.28.1",
    "structlog==25.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0,<10",
    "pytest-asyncio>=1.3,<2",
    "ruff>=0.15,<1",
    "mypy>=1.19,<2",
]

[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["B008"]
