[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "formfusion-backend"
version = "0.1.0"
description = "Production-oriented realtime backend for FormFusion multi-phone pose analysis."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "fastapi==0.139.2",
  "uvicorn[standard]==0.41.0",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "PyJWT==2.12.1",
  "numpy==2.4.3",
  "opencv-python-headless==5.0.0.93",
  "python-multipart==0.0.32",
  "structlog==25.5.0",
  "prometheus-client==0.24.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9.0,<10",
  "pytest-asyncio>=1.3,<2",
  "hypothesis>=6.150,<7",
  "ruff>=0.15,<1",
  "mypy>=1.19,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/formfusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["formfusion"]
